--- a/Backups/htmlbak.html
+++ b/Backups/htmlbak.html
@@ -12,9 +12,8 @@
     <title>Task Manager with Users & Admin</title>
 
     <!-- Scripts -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap.min.css"
-        rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap.min.css" rel="stylesheet" />
     <link href="style.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
 </head>
@@ -185,22 +184,6 @@
                                         <label for="admin-new-password" class="form-label">New Password</label>
                                         <input type="password" id="admin-new-password" class="form-control" />
                                     </div>
-                                    <div class="mb-3">
-                                        <label for="admin-new-surname" class="form-label">Surname</label>
-                                        <input type="text" id="admin-new-surname" class="form-control" />
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="admin-new-firstname" class="form-label">First Name</label>
-                                        <input type="text" id="admin-new-firstname" class="form-control" />
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="admin-new-middlename" class="form-label">Middle Name</label>
-                                        <input type="text" id="admin-new-middlename" class="form-control" />
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="admin-new-designation" class="form-label">Designation</label>
-                                        <input type="text" id="admin-new-designation" class="form-control" />
-                                    </div>
                                     <button class="btn btn-success mb-3" id="admin-create-user-btn">Create User</button>
                                     <h6>Existing Users</h6>
                                     <ul id="user-list" class="list-group"></ul>
@@ -323,7 +306,7 @@
                 </div>
             </div>
         </div>
-
+        
         <!-- ===== Modals ===== -->
         <!-- Confirmation Modal -->
         <div class="modal fade" id="confirmModal" tabindex="-1" aria-labelledby="confirmModalLabel" aria-hidden="true">
@@ -346,17 +329,17 @@
         </div>
 
         <!-- Alert Modal -->
-        <div class="modal fade" id="alertModal" tabindex="-1" aria-labelledby="alertModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
+        <div id="alert-modal" class="modal" tabindex="-1" style="display:none;">
+            <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="alertModalLabel">Alert</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        <h5 class="modal-title">Alert</h5>
                     </div>
-                    <div class="modal-body" id="alertModalBody"></div>
+                    <div class="modal-body">
+                        <p id="alert-modal-message"></p>
+                    </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" id="alertModalOk"
-                            data-bs-dismiss="modal">OK</button>
+                        <button type="button" id="alert-modal-ok-btn" class="btn btn-primary">OK</button>
                     </div>
                 </div>
             </div>
@@ -399,58 +382,12 @@
             </div>
         </div>
 
-        <!-- Global Spinner Indicator -->
-        <div id="global-spinner-indicator"
-            style="position:fixed;bottom:16px;left:50%;transform:translateX(-50%);z-index:2000;display:none;">
-            <div class="d-flex align-items-center bg-light border rounded px-3 py-2 shadow">
-                <div class="spinner-border text-primary me-2" role="status" style="width:1.5rem;height:1.5rem;">
-                    <span class="visually-hidden">Loading...</span>
-                </div>
-                <span id="global-spinner-text">Loading...</span>
-            </div>
-        </div>
-
-        <!-- Bootstrap Toast for notifications -->
-        <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 2100">
-            <div id="global-toast" class="toast align-items-center text-bg-primary border-0" role="alert"
-                aria-live="assertive" aria-atomic="true">
-                <div class="d-flex">
-                    <div class="toast-body" id="global-toast-body">
-                        Done!
-                    </div>
-                    <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"
-                        aria-label="Close"></button>
-                </div>
-            </div>
-        </div>
-
         <!-- ===== Scripts ===== -->
-
         <!-- Prereq Script -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script
             src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
-
-        <!-- Firebase App (the core Firebase SDK) -->
-        <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
-        <!-- Firebase Firestore (the database) -->
-        <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
-        <script>
-            // Your Firebase config
-            const firebaseConfig = {
-                apiKey: "AIzaSyCkaLhIvt_Plf8h4B1ImxDN-e3pg_tABD0",
-                authDomain: "task-tracker-c3fd6.firebaseapp.com",
-                projectId: "task-tracker-c3fd6",
-                storageBucket: "task-tracker-c3fd6.firebasestorage.app",
-                messagingSenderId: "946848839661",
-                appId: "1:946848839661:web:37486cc58c1e14a63059e4",
-                measurementId: "G-CDG3DWTF93"
-            };
-            firebase.initializeApp(firebaseConfig);
-            window.db = firebase.firestore();
-        </script>
-
         <!-- Main Script -->
         <script src="script.js"></script>
 
