--- a/Backups/indexbak2.html
+++ b/Backups/indexbak2.html
@@ -12,7 +12,7 @@
     <title>Task Manager with Users & Admin</title>
 
     <!-- Scripts -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap.min.css"
         rel="stylesheet" />
     <link href="style.css" rel="stylesheet" />
@@ -184,22 +184,6 @@
                                     <div class="mb-3">
                                         <label for="admin-new-password" class="form-label">New Password</label>
                                         <input type="password" id="admin-new-password" class="form-control" />
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="admin-new-surname" class="form-label">Surname</label>
-                                        <input type="text" id="admin-new-surname" class="form-control" />
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="admin-new-firstname" class="form-label">First Name</label>
-                                        <input type="text" id="admin-new-firstname" class="form-control" />
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="admin-new-middlename" class="form-label">Middle Name</label>
-                                        <input type="text" id="admin-new-middlename" class="form-control" />
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="admin-new-designation" class="form-label">Designation</label>
-                                        <input type="text" id="admin-new-designation" class="form-control" />
                                     </div>
                                     <button class="btn btn-success mb-3" id="admin-create-user-btn">Create User</button>
                                     <h6>Existing Users</h6>
@@ -399,35 +383,10 @@
             </div>
         </div>
 
-        <!-- Global Spinner Indicator -->
-        <div id="global-spinner-indicator"
-            style="position:fixed;bottom:16px;left:50%;transform:translateX(-50%);z-index:2000;display:none;">
-            <div class="d-flex align-items-center bg-light border rounded px-3 py-2 shadow">
-                <div class="spinner-border text-primary me-2" role="status" style="width:1.5rem;height:1.5rem;">
-                    <span class="visually-hidden">Loading...</span>
-                </div>
-                <span id="global-spinner-text">Loading...</span>
-            </div>
-        </div>
-
-        <!-- Bootstrap Toast for notifications -->
-        <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 2100">
-            <div id="global-toast" class="toast align-items-center text-bg-primary border-0" role="alert"
-                aria-live="assertive" aria-atomic="true">
-                <div class="d-flex">
-                    <div class="toast-body" id="global-toast-body">
-                        Done!
-                    </div>
-                    <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"
-                        aria-label="Close"></button>
-                </div>
-            </div>
-        </div>
-
         <!-- ===== Scripts ===== -->
 
         <!-- Prereq Script -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script
             src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
