--- a/Backups/Bak02/index.html
+++ b/Backups/Bak02/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- TO DO:
+    1. Backup and import tasks and users
+    2. Firebase integration after github hosting (requires DB)
+-->
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Task Manager with Users & Admin</title>
 
-    <!-- ===== Scripts ===== -->
+    <!-- Scripts -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap.min.css"
         rel="stylesheet" />
@@ -16,7 +21,7 @@
 
 <body>
 
-    <!-- ===== Login Screen ===== -->
+    <!-- LOGIN SCREEN -->
     <div id="auth" class="container" style="max-width: 400px;">
         <h3 class="mb-4">Please Log In</h3>
         <div class="mb-3">
@@ -31,7 +36,7 @@
         <div id="login-error" class="text-danger mt-3"></div>
     </div>
 
-    <!-- ===== Main App ===== -->
+    <!-- MAIN APP -->
     <div id="app" class="container">
 
         <div class="d-flex justify-content-between align-items-center mb-3">
@@ -104,19 +109,6 @@
                     </div>
                 </div>
                 <div id="today-tasks-list" class="mb-4"></div>
-                <!-- Simple User-only TODO List: Appears after Today table -->
-                <div id="user-todo-section" style="max-width:400px;margin:2rem auto 2rem auto;padding:1rem;background:#fff;border-radius:8px;box-shadow:0 2px 8px #0001;">
-                    <h5>My TODO List</h5>
-                    <form id="todo-form" autocomplete="off" style="display:flex;gap:0.5rem;margin-bottom:1rem;">
-                        <input id="todo-input" type="text" class="form-control" placeholder="Add a new task..." style="flex:1;" autocomplete="off">
-                        <button type="submit" class="btn btn-primary">Add</button>
-                    </form>
-                    <ul id="todo-list" class="list-group mb-3"></ul>
-                    <div id="todo-done-section" style="margin-top:1rem;">
-                        <h6 style="font-size:1rem;">Completed</h6>
-                        <ul id="todo-done-list" class="list-group"></ul>
-                    </div>
-                </div>
             </div>
 
             <!-- Archive Tab -->
