--- a/Backups/Bak03/index.html
+++ b/Backups/Bak03/index.html
@@ -12,8 +12,9 @@
     <title>Task Manager with Users & Admin</title>
 
     <!-- Scripts -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap.min.css"
+        rel="stylesheet" />
     <link href="style.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
 </head>
@@ -40,7 +41,20 @@
 
         <div class="d-flex justify-content-between align-items-center mb-3">
             <h3>Task Manager - User: <span id="current-user-name"></span></h3>
-            <button id="logout-btn" class="btn btn-outline-secondary">Logout</button>
+            <div class="d-flex align-items-center gap-2">
+                <div class="dropdown">
+                    <button id="palette-toggle-btn" class="btn btn-outline-secondary dropdown-toggle" title="Switch color palette" data-bs-toggle="dropdown" aria-expanded="false">
+                        <span class="bi bi-palette"></span> <span id="palette-toggle-label">Palette</span>
+                    </button>
+                    <ul class="dropdown-menu" id="palette-dropdown-menu">
+                        <!-- Palette options will be injected by JS -->
+                    </ul>
+                </div>
+                <button id="dark-mode-toggle-btn" class="btn btn-outline-secondary" title="Toggle dark mode">
+                    <span id="dark-mode-toggle-icon" class="bi bi-moon"></span> <span id="dark-mode-toggle-label">Dark Mode</span>
+                </button>
+                <button id="logout-btn" class="btn btn-outline-secondary">Logout</button>
+            </div>
         </div>
 
         <ul class="nav nav-tabs mb-3" id="main-tabs" role="tablist">
@@ -70,8 +84,17 @@
                     <input type="text" id="task-activity-input" class="form-control" placeholder="Activity" />
                     <input type="text" id="task-remarks-input" class="form-control" placeholder="Remarks" />
                     <input type="text" id="task-date-input" class="form-control" style="max-width:160px;" />
-                    <input type="text" id="task-tags-input" class="form-control" placeholder="Tags (comma separated)"
-                        style="max-width:180px;" />
+                    <div class="position-relative" style="max-width: 300px;">
+                        <div id="task-tags-input-container" class="form-control d-flex flex-wrap align-items-center" style="min-height:38px;gap:4px;padding:2px 8px;cursor:text;max-width:300px;"></div>
+                        <div id="tags-suggestions" class="dropdown-menu" style="max-width:300px;overflow-x:auto;"></div>
+                    </div>
+                </div>
+                <div class="mb-2 d-flex align-items-center gap-2">
+                    <div class="position-relative" style="max-width:300px;">
+                        <input type="text" id="today-search-input" class="form-control" placeholder="Search tasks..." style="padding-right:60px;" />
+                        <button id="today-search-clear" class="btn btn-outline-secondary btn-sm search-clear-inside" title="Clear search" style="display:none; position:absolute; right:6px; top:50%; transform:translateY(-50%); z-index:2;">CLEAR</button>
+                    </div>
+                    <div id="today-search-spinner" class="spinner-border spinner-border-sm text-primary ms-2" style="display:none;" role="status"><span class="visually-hidden">Searching...</span></div>
                 </div>
                 <button class="btn btn-primary mb-3" id="add-task-btn">Add Task</button>
                 <div class="d-flex justify-content-between align-items-center mb-2">
@@ -86,6 +109,19 @@
                     </div>
                 </div>
                 <div id="today-tasks-list" class="mb-4"></div>
+                <!-- Simple User-only TODO List: Appears after Today table -->
+                <div id="user-todo-section" style="max-width:400px;margin:2rem auto 2rem auto;padding:1rem;background:#fff;border-radius:8px;box-shadow:0 2px 8px #0001;">
+                    <h5>My TODO List</h5>
+                    <form id="todo-form" autocomplete="off" style="display:flex;gap:0.5rem;margin-bottom:1rem;">
+                        <input id="todo-input" type="text" class="form-control" placeholder="Add a new task..." style="flex:1;" autocomplete="off">
+                        <button type="submit" class="btn btn-primary">Add</button>
+                    </form>
+                    <ul id="todo-list" class="list-group mb-3"></ul>
+                    <div id="todo-done-section" style="margin-top:1rem;">
+                        <h6 style="font-size:1rem;">Completed</h6>
+                        <ul id="todo-done-list" class="list-group"></ul>
+                    </div>
+                </div>
             </div>
 
             <!-- Archive Tab -->
@@ -107,6 +143,14 @@
                         </div>
                     </div>
 
+                    <div class="mb-2 d-flex align-items-center gap-2">
+                        <div class="position-relative" style="max-width:300px;">
+                            <input type="text" id="archive-search-input" class="form-control" placeholder="Search archive..." style="padding-right:60px;" />
+                            <button id="archive-search-clear" class="btn btn-outline-secondary btn-sm search-clear-inside" title="Clear search" style="display:none; position:absolute; right:6px; top:50%; transform:translateY(-50%); z-index:2;">CLEAR</button>
+                        </div>
+                        <div id="archive-search-spinner" class="spinner-border spinner-border-sm text-primary ms-2" style="display:none;" role="status"><span class="visually-hidden">Searching...</span></div>
+                    </div>
+
                     <div id="archive-tasks-list"></div>
                 </div>
             </div>
@@ -114,12 +158,16 @@
             <!-- View Tasks Tab -->
             <div class="tab-pane fade" id="view-users" role="tabpanel" aria-labelledby="view-users-tab">
                 <div class="mb-3">
-                    <label for="view-tasks-date" class="form-label">Select Date:</label>
-                    <div class="input-group date" id="view-tasks-date-group" data-date-format="yyyy-mm-dd"
-                        data-date-autoclose="true" data-date-today-highlight="true">
-                        <input type="text" id="view-tasks-date" class="form-control" readonly
-                            style="background:#fff; cursor:pointer; max-width:200px;" />
-                        <span class="input-group-text"><i class="bi bi-calendar"></i></span>
+                    <div id="view-tasks-datepicker" class="datepicker-inline"></div>
+                    <div class="d-flex justify-content-between align-items-center mb-2">
+                        <h5>Tasks for <span id="view-tasks-date-display">[select a date]</span></h5>
+                    </div>
+                    <div class="mb-2 d-flex align-items-center gap-2">
+                        <div class="position-relative" style="max-width:300px;">
+                            <input type="text" id="view-search-input" class="form-control" placeholder="Search all users' tasks..." style="padding-right:60px;" />
+                            <button id="view-search-clear" class="btn btn-outline-secondary btn-sm search-clear-inside" title="Clear search" style="display:none; position:absolute; right:6px; top:50%; transform:translateY(-50%); z-index:2;">CLEAR</button>
+                        </div>
+                        <div id="view-search-spinner" class="spinner-border spinner-border-sm text-primary ms-2" style="display:none;" role="status"><span class="visually-hidden">Searching...</span></div>
                     </div>
                 </div>
                 <div id="users-tasks-table-container"></div>
@@ -183,6 +231,22 @@
                                     <div class="mb-3">
                                         <label for="admin-new-password" class="form-label">New Password</label>
                                         <input type="password" id="admin-new-password" class="form-control" />
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="admin-new-surname" class="form-label">Surname</label>
+                                        <input type="text" id="admin-new-surname" class="form-control" />
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="admin-new-firstname" class="form-label">First Name</label>
+                                        <input type="text" id="admin-new-firstname" class="form-control" />
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="admin-new-middlename" class="form-label">Middle Name</label>
+                                        <input type="text" id="admin-new-middlename" class="form-control" />
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="admin-new-designation" class="form-label">Designation</label>
+                                        <input type="text" id="admin-new-designation" class="form-control" />
                                     </div>
                                     <button class="btn btn-success mb-3" id="admin-create-user-btn">Create User</button>
                                     <h6>Existing Users</h6>
@@ -266,6 +330,13 @@
                                     <button class="btn btn-primary" id="mass-editor-apply-filter-btn">Apply
                                         Filter</button>
                                 </div>
+                <div class="mb-2 d-flex align-items-center gap-2">
+                    <div class="position-relative" style="max-width:300px;">
+                        <input type="text" id="mass-search-input" class="form-control" placeholder="Search tasks..." style="padding-right:60px;" />
+                        <button id="mass-search-clear" class="btn btn-outline-secondary btn-sm search-clear-inside" title="Clear search" style="display:none; position:absolute; right:6px; top:50%; transform:translateY(-50%); z-index:2;">CLEAR</button>
+                    </div>
+                    <div id="mass-search-spinner" class="spinner-border spinner-border-sm text-primary ms-2" style="display:none;" role="status"><span class="visually-hidden">Searching...</span></div>
+                </div>
                                 <div class="d-flex gap-2 mb-2">
                                     <button class="btn btn-outline-secondary btn-sm" id="mass-editor-edit-btn">
                                         <span id="mass-editor-edit-btn-label">EDIT</span>
@@ -306,7 +377,7 @@
                 </div>
             </div>
         </div>
-        
+
         <!-- ===== Modals ===== -->
         <!-- Confirmation Modal -->
         <div class="modal fade" id="confirmModal" tabindex="-1" aria-labelledby="confirmModalLabel" aria-hidden="true">
@@ -329,17 +400,17 @@
         </div>
 
         <!-- Alert Modal -->
-        <div id="alert-modal" class="modal" tabindex="-1" style="display:none;">
-            <div class="modal-dialog modal-dialog-centered">
+        <div class="modal fade" id="alertModal" tabindex="-1" aria-labelledby="alertModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title">Alert</h5>
+                        <h5 class="modal-title" id="alertModalLabel">Alert</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                    <div class="modal-body">
-                        <p id="alert-modal-message"></p>
-                    </div>
+                    <div class="modal-body" id="alertModalBody"></div>
                     <div class="modal-footer">
-                        <button type="button" id="alert-modal-ok-btn" class="btn btn-primary">OK</button>
+                        <button type="button" class="btn btn-primary" id="alertModalOk"
+                            data-bs-dismiss="modal">OK</button>
                     </div>
                 </div>
             </div>
@@ -382,12 +453,58 @@
             </div>
         </div>
 
+        <!-- Global Spinner Indicator -->
+        <div id="global-spinner-indicator"
+            style="position:fixed;bottom:16px;left:50%;transform:translateX(-50%);z-index:2000;display:none;">
+            <div class="d-flex align-items-center bg-light border rounded px-3 py-2 shadow">
+                <div class="spinner-border text-primary me-2" role="status" style="width:1.5rem;height:1.5rem;">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+                <span id="global-spinner-text">Loading...</span>
+            </div>
+        </div>
+
+        <!-- Bootstrap Toast for notifications -->
+        <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 2100">
+            <div id="global-toast" class="toast align-items-center text-bg-primary border-0" role="alert"
+                aria-live="assertive" aria-atomic="true">
+                <div class="d-flex">
+                    <div class="toast-body" id="global-toast-body">
+                        Done!
+                    </div>
+                    <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"
+                        aria-label="Close"></button>
+                </div>
+            </div>
+        </div>
+
         <!-- ===== Scripts ===== -->
+
         <!-- Prereq Script -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script
             src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+
+        <!-- Firebase App (the core Firebase SDK) -->
+        <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
+        <!-- Firebase Firestore (the database) -->
+        <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
+        <script>
+            // Your Firebase config
+            const firebaseConfig = {
+                apiKey: "AIzaSyCkaLhIvt_Plf8h4B1ImxDN-e3pg_tABD0",
+                authDomain: "task-tracker-c3fd6.firebaseapp.com",
+                projectId: "task-tracker-c3fd6",
+                storageBucket: "task-tracker-c3fd6.firebasestorage.app",
+                messagingSenderId: "946848839661",
+                appId: "1:946848839661:web:37486cc58c1e14a63059e4",
+                measurementId: "G-CDG3DWTF93"
+            };
+            firebase.initializeApp(firebaseConfig);
+            window.db = firebase.firestore();
+        </script>
+
         <!-- Main Script -->
         <script src="script.js"></script>
 
